// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render a list of filters 1`] = `
<ul
  className="orizzonte__list"
>
  <li
    className="orizzonte__item"
    key="0"
  >
    <Select
      disabled={false}
      label="Test select"
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value=""
    />
  </li>
  <li
    className="orizzonte__item"
    key="1"
  >
    <Choices
      fieldName="myAPIField"
      label="Test multiple choices"
      multiple={true}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
</ul>
`;

exports[`<List /> should render a list of filters with custom done button and orientation 1`] = `
<ul
  className="orizzonte__list orizzonte__list--right"
>
  <li
    className="orizzonte__item"
    key="0"
  >
    <Select
      disabled={false}
      label="Test select"
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value=""
    />
  </li>
  <li
    className="orizzonte__item"
    key="1"
  >
    <Choices
      fieldName="myAPIField"
      label="Test multiple choices"
      multiple={true}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
</ul>
`;

exports[`<List /> should render a list of filters without done button 1`] = `
<ul
  className="orizzonte__list"
>
  <li
    className="orizzonte__item"
    key="0"
  >
    <Select
      disabled={false}
      label="Test select"
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value=""
    />
  </li>
  <li
    className="orizzonte__item"
    key="1"
  >
    <Choices
      fieldName="myAPIField"
      label="Test multiple choices"
      multiple={true}
      onUpdate={[Function]}
      options={
        Array [
          Object {
            "disabled": true,
            "label": "Test value 1",
            "value": 1,
          },
          Object {
            "label": "Test value 2",
            "value": 2,
          },
          Object {
            "disabled": true,
            "label": "Test value 3",
            "value": 3,
          },
        ]
      }
      value={null}
    />
  </li>
</ul>
`;
